[package]
name = "icfpc2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
rand_distr = "0.4.1"

[dependencies.rand]
version = "0.8.4"
features = ["small_rng"]
